# test-kit

./: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  databricks-apps-research.md
.specify/memory/: constitution.md
databricks_app/: README.md  app.py  generation_notebook.py  job_config.json  job_update.json  pyproject.toml  requirements.txt
databricks_app/src/generators/: audience_generator.py  campaign_generator.py  engagement_generator.py  household_generator.py  individual_generator.py  pipeline.py  response_generator.py
databricks_app/src/models/: __init__.py  schemas.py
databricks_app/src/storage/: catalog_writer.py
databricks_app/src/utils/: auth.py  progress.py
databricks_app/src/wizard/: __init__.py  campaign_config.py  demographics_config.py  engagement_config.py  household_config.py  review_submit.py  validation.py
react-app/: .env.example  app.yaml  databricks-app.yml  package-lock.json  package.json  vite.config.js  vitest.config.js
react-app/scripts/: get-oauth-info.sh
react-app/src/: App.jsx  main.jsx
react-app/src/hooks/: useConfigPersistence.js  useDistributionSlider.js  useJobPolling.js  useWizardState.js
react-app/src/pages/: JobMonitor.jsx
react-app/tests/: setup.js
specs/001-create-a-databricks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-react-js-version/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/contract/: test_app_interface.py  test_demographics_config.py  test_household_config.py
tests/integration/: test_catalog_permissions.py  test_full_pipeline.py  test_household_generation.py
(+26 files in other folders)
